--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import scanpy as sc\n",
     "from scDMFK.io import get_embedding, draw_umap\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score, adjusted_rand_score, normalized_mutual_info_score\n"
+    "from sklearn.metrics import silhouette_score, adjusted_rand_score, normalized_mutual_info_score"
    ]
   },
   {
@@ -32,7 +24,7 @@
     "        data = np.array(data)\n",
     "    \n",
     "    n_clusters = len(np.unique(true_labels))\n",
-    "    np.random.seed(seed)\n",
+    "    np.random.seed(seed) #set random seet for reproduceable results\n",
     "    \n",
     "    # get UMAP 2-D embedding\n",
     "    embedding = get_embedding(data)\n",
@@ -66,7 +58,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_files = ['endoderm','Quake_10x_Bladder','Quake_10x_Limb_Muscle','Quake_10x_Spleen','Young']\n",
+    "for data in data_files:\n",
+    "    file_path = 'results/' + data + '/results.h5ad'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = 'endoderm'\n",
+    "end_multinom = sc.read('results/' + data + '/results-multinomial.h5ad')\n",
+    "end_zinb = sc.read('results/' + data + '/results-zinb.h5ad')\n",
+    "end_wmse = sc.read('results/' + data + '/results-weight mse.h5ad')\n",
+    "end_mmse = sc.read('results/' + data + '/results-mask mse.h5ad')"
+   ]
   }
  ],
  "metadata": {
