--- a/scripts/preprocess_highlyvar.ipynb
+++ b/scripts/preprocess_highlyvar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,15 +10,6 @@
      "output_type": "stream",
      "text": [
       "Current Working Directory:  /Users/yufeideng/Documents/GitHub/bis687-project\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -32,13 +23,13 @@
     "os.chdir(\"..\")\n",
     "# check if in the main working directory\n",
     "print(\"Current Working Directory: \", os.getcwd())\n",
-    "from scDMFK.preprocess import *\n",
-    "from scDMFK.io import *\n"
+    "\n",
+    "from scDMFK.preprocess import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +62,7 @@
     "    data = adata.copy()\n",
     "    data = normalize(data, highly_genes=n_genes, highly_subset=highly_subset)\n",
     "    df_sub = pd.DataFrame(data.raw.X, index=data.obs_names, columns=data.raw.var_names)[data.var_names]\n",
+    "    df_sub = df_sub.T\n",
     "    df_sub.to_csv(os.path.join(out, 'endoderm-%d.csv'%n_genes))\n"
    ]
   },
