--- a/scripts/preprocess_highlyvar.ipynb
+++ b/scripts/preprocess_highlyvar.ipynb
@@ -29,6 +29,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def peprocess_highlyvar_genes(dataname, transpose=False,\n",
+    "                            highly_genes=[500, 1000, 5000, 10000]):\n",
+    "    print('Processing: %s' % dataname)\n",
+    "    out_path = 'data/' + dataname\n",
+    "    try:\n",
+    "        data_path = dataname + '/data.h5'\n",
+    "    except:\n",
+    "        data_path = dataname + '/endoderm.csv'\n",
+    "\n",
+    "    adata = prepro(data_path, transpose=transpose)\n",
+    "\n",
+    "    for n_genes in highly_genes:\n",
+    "        data = adata.copy()\n",
+    "        data = normalize(data, highly_genes=n_genes, highly_subset=True)\n",
+    "        df_sub = pd.DataFrame(data.raw.X, index=data.obs_names, columns=data.raw.var_names)[data.var_names]\n",
+    "        df_sub = df_sub.T\n",
+    "        df_sub.to_csv(os.path.join(out_path, '%s-%d.csv' % (dataname, n_genes)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -47,23 +72,8 @@
    ],
    "source": [
     "dataname = 'endoderm'\n",
-    "\n",
-    "print('Processing: %s' % dataname)\n",
-    "out = 'data/' + dataname\n",
-    "# data_path = dataname + '/data.h5'\n",
-    "data_path = dataname + '/endoderm.csv'\n",
-    "transpose = True\n",
-    "highly_genes = [500, 1000, 5000, 10000]\n",
-    "highly_subset = True\n",
-    "\n",
-    "adata = prepro(data_path, transpose=transpose)\n",
-    "\n",
-    "for n_genes in highly_genes:\n",
-    "    data = adata.copy()\n",
-    "    data = normalize(data, highly_genes=n_genes, highly_subset=highly_subset)\n",
-    "    df_sub = pd.DataFrame(data.raw.X, index=data.obs_names, columns=data.raw.var_names)[data.var_names]\n",
-    "    df_sub = df_sub.T\n",
-    "    df_sub.to_csv(os.path.join(out, 'endoderm-%d.csv'%n_genes))\n"
+    "peprocess_highlyvar_genes(dataname=dataname, transpose=True,\n",
+    "                            highly_genes=[500, 1000, 5000, 10000])"
    ]
   },
   {
@@ -77,6 +87,78 @@
     "pd.DataFrame(\n",
     "    {'label': [label.split(\"_\")[0] for label in endoderm.columns.to_list()]}\n",
     "    ).to_csv('data/endoderm/cell_label.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/scanpy/preprocessing/_utils.py:11: RuntimeWarning: overflow encountered in multiply\n",
+      "  mean_sq = np.multiply(X, X).mean(axis=axis, dtype=np.float64)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 500 genes and 5685 cells\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/scanpy/preprocessing/_utils.py:11: RuntimeWarning: overflow encountered in multiply\n",
+      "  mean_sq = np.multiply(X, X).mean(axis=axis, dtype=np.float64)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 1000 genes and 5685 cells\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/scanpy/preprocessing/_utils.py:11: RuntimeWarning: overflow encountered in multiply\n",
+      "  mean_sq = np.multiply(X, X).mean(axis=axis, dtype=np.float64)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 5000 genes and 5685 cells\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yufeideng/Documents/GitHub/bis687-project/sc-env/lib/python3.8/site-packages/scanpy/preprocessing/_utils.py:11: RuntimeWarning: overflow encountered in multiply\n",
+      "  mean_sq = np.multiply(X, X).mean(axis=axis, dtype=np.float64)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 18051 genes and 5685 cells\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataname = 'Young'\n",
+    "peprocess_highlyvar_genes(dataname=dataname, transpose=False,\n",
+    "                            highly_genes=[500, 1000, 5000, 10000])"
    ]
   }
  ],
